--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
 </form>
 </script>
 </header>
-    <h1> musab khaled ibrahim sanad </h1>
 <div class="img1"> <img " src="Labor-Day-Sale-2024_TV-Wall_2560x700.webp" alt="">
 
    <span class="sec2p">
@@ -116,6 +115,8 @@
 </div>
 <div class="title"><h1>HANDPICKED PREBUILTS
 </h1></div>
+
+    <div style= " font size:70px  ">  <h1> musab khaeld ibrahim sanad </h1></div>
 <section class="parent2"> 
 <div class="childe"><h1 class="qq"> THE O11 VISION
 </h1><img class="j1" src="ph2.png" alt=""> <p class="par1" >Windows 11 Home<br>
