--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <div class="title"><h1>HANDPICKED PREBUILTS
 </h1></div>
 
-    <div style= " font size:70px  ">  <h1> musab khaeld ibrahim sanad </h1></div>
+    <div style= " font size:70px ; color:white   ">  <h1> musab khaeld ibrahim sanad </h1></div>
 <section class="parent2"> 
 <div class="childe"><h1 class="qq"> THE O11 VISION
 </h1><img class="j1" src="ph2.png" alt=""> <p class="par1" >Windows 11 Home<br>
